--- a/translations/kangyur/translations/043-004_toh67_the_great_lions_roar.xml
+++ b/translations/kangyur/translations/043-004_toh67_the_great_lions_roar.xml
@@ -32,7 +32,7 @@
                                         Xiangzhi Yu, Jiayu Xie</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.7 <date>2024</date>
+                <edition>v 1.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -201,6 +201,9 @@
                 </change>
                 <change who="#andre" when="2024-06-28T15:45:49.053Z" type="text-version" status="1.0.7" xml:id="UT22084-043-004-712">
                     <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
+                </change>
+                <change who="#celso" when="2024-07-09T18:29:08.382Z" type="text-version" status="1.0.8" xml:id="UT22084-043-004-715">
+                    <desc>Activated pending links</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -400,9 +403,11 @@
                                 <ref target="https://read.84000.co/translation/toh195.html">The Avalokinī Sūtra</ref>
                             </title> (84000:
                                                   Translating the Words of the Buddha, 2021).
-                                                </note> as well as <title xml:lang="en">Verses on
-                                                        Circumambulating Reliquaries</title> (<title xml:lang="Sa-Ltn">Caitya­pradakṣiṇa­gāthā</title>,
-                                                <ref rend="pending" target="http://read.84000.co/translation/toh321.html">Toh 321</ref>). In the case of
+                                                  </note> as well as <title xml:lang="en">The Verses on Circumambulating Shrines</title> (<title xml:lang="Sa-Ltn">Caitya­pradakṣiṇa­gāthā</title>,
+                                                <ref rend="pending" target="http://read.84000.co/translation/toh321.html">Toh 321</ref>).<note place="end" xml:id="UT22084-043-004-713">84000 Translation Team, trans., <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/toh321.html">The Verses on Circumambulating Shrines</ref>
+                            </title> (84000:
+                                                        Translating the Words of the Buddha, 2024).</note> In the case of
                                                 devotional practices focused on images, it might be
                                                 contrasted with <title xml:lang="en">Describing the
                                                   Benefits of Producing Representations of the
@@ -4305,8 +4310,8 @@
                                         <bibl xml:id="UT22084-043-004-456">
                         <title xml:lang="Bo-Ltn">mchod rten bskor ba’i tshigs bcad</title> (<title xml:lang="Sa-Ltn">Caitya­pradakṣiṇa­gāthā</title>)
                                                   [<title xml:lang="en">Verses on Circumambulating
-                                                          Reliquaries</title>]. <ref rend="pending" target="http://read.84000.co/translation/toh321.html">Toh 321</ref>, Degé Kangyur vol.
-                                                72 (mdo sde, sa), folios 198.b–201.a.</bibl>
+                                                          Reliquaries</title>]. Toh 321, Degé Kangyur vol.
+                                                72 (mdo sde, sa), folios 198.b–201.a. English translation in 84000 Translation Team 2024.</bibl>
                                         <bibl xml:id="UT22084-043-004-457">
                         <title xml:lang="Bo-Ltn">de bzhin gshegs pa’i gzugs brnyan bzhag pa’i phan
                                                 yon yang dag par brjod pa</title> (<title xml:lang="Sa-Ltn">Tathāgata­prati­bimba­prati­ṣṭhānu­śaṃsasaṃvarṇana</title>)
@@ -4404,6 +4409,11 @@
                                 </div>
                                 <div type="section" xml:id="UT22084-043-004-listBibl-2">
                                         <head type="section" tid="412">Secondary Sources</head>
+                                        <bibl xml:id="UT22084-043-004-714">84000 Translation Team, trans. <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh321.html">The Verses on Circumambulating Shrines</ref>
+                        </title> (<title xml:lang="Sa-Ltn">Caitya­pradakṣiṇa­gāthā</title>, Toh 321). 84000: Translating the Words of the
+                                                Buddha, 2024.</bibl>
+                                        
                                         <bibl xml:id="UT22084-043-004-473">Alexander Csoma de Kőrös
                                                 Translation Group, trans. <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh320.html">Describing the Benefits of Producing
@@ -5201,13 +5211,13 @@
                         </gloss>
                     </item>
                                         <item>
-                                                <gloss type="place" xml:id="UT22084-043-004-711">
-                                                        <term type="translationMain">Jeta’s Grove, Anāthapiṇḍada’s Park</term>
-                                                        <term xml:lang="Sa-Ltn" type="sourceUnspecified">jetavanam anāthapiṇḍadasyārāmaḥ</term>
-                                                        <term xml:lang="Bo-Ltn" type="attestedSource" n="1">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
-                                                        <term xml:lang="bo" type="attestedSource" n="1">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
-                                                </gloss>
-                                        </item>
+                        <gloss xml:id="UT22084-043-004-711" type="place" mode="match">
+                            <term type="translationMain">Jeta’s Grove, Anāthapiṇḍada’s Park</term>
+                            <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">jetavanam anāthapiṇḍadasyārāmaḥ</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal mgon med zas sbyin gyi kun dga’ ra ba</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ་མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
+                        </gloss>
+                    </item>
                                         <item>
                         <gloss type="place" xml:id="UT22084-043-004-560">
                             <term type="translationMain">Jambudvīpa</term>
