--- a/translations/tengyur/placeholders/045-014_toh1916-caturdevatapariprcchatika.xml
+++ b/translations/tengyur/placeholders/045-014_toh1916-caturdevatapariprcchatika.xml
@@ -9,8 +9,12 @@
                 <title xml:lang="Sa-Ltn" type="mainTitle">Catur­devatā­paripṛcchā­ṭīkā</title>
                 <title xml:lang="en" type="mainTitle">An Explanation of the “Questions of the Four Goddesses” Tantra</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT23703-045-014"/>
             </publicationStmt>
             <sourceDesc>
@@ -34,6 +38,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT23703-045-014-4">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-10T12:33:37.917Z" type="translation-status" status="3" xml:id="UT23703-045-014-5">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-10T12:33:37.917Z" type="text-version" status="0.0.1" xml:id="UT23703-045-014-6">
+                    <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
