--- a/translations/kangyur/translations/088-034_toh539e,774,1074-the_dharani_for_polishing_a_gem.xml
+++ b/translations/kangyur/translations/088-034_toh539e,774,1074-the_dharani_for_polishing_a_gem.xml
@@ -8,14 +8,14 @@
                 
                 <title type="mainTitle" xml:lang="Bo-Ltn">rin po che brdar ba’i gzungs</title>
                 <title type="mainTitle" xml:lang="bo">རིན་པོ་ཆེ་བརྡར་བའི་གཟུངས།</title>
-                <title type="mainTitle" xml:lang="en">The Dhāraṇī for Polishing a Gem</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī of the Polished Gem</title>
                 <author role="translatorMain" xml:id="UT22084-088-034-1"><!--84000 Associate Translators--></author>
                 <author role="translatorEng" xml:id="UT22084-088-034-2">Catherine Dalton</author>
                 <editor role="projectEditor" xml:id="UT22084-088-034-15">Andreas Doctor</editor>
                 <editor role="copyEditor" xml:id="UT22084-088-034-16">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 1.0.0 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -24,7 +24,7 @@
                     is a global non-profit initiative to translate all the
                     Buddha’s words into modern languages, and to make them
                     available to everyone. </publisher>
-                <availability status="2">
+                <availability status="1.a">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of
@@ -41,7 +41,7 @@
                 <note>An early mistake in the assigning of UT numbers within the
                     84000 project means that these ids diverge slightly from the
                     standard logic.</note>
-                <date>2024-07-08</date>
+                <date>2024-07-11</date>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh539e" type="text">
@@ -120,6 +120,12 @@
                 <change who="#line-tofte" when="2024-07-09T07:53:48.642Z" type="text-version" status="0.0.2" xml:id="UT22084-088-034-48">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
+                <change who="#martina-cotter" when="2024-07-11T08:17:15.908Z" type="translation-status" status="1.a" xml:id="UT22084-088-034-49">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-07-11T08:17:15.908Z" type="text-version" status="1.0.0" xml:id="UT22084-088-034-50">
+                    <desc>First published version.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -132,7 +138,7 @@
                 <head type="summary" tid="1">Summary</head>
                 <milestone unit="chunk" xml:id="UT22084-088-034-20"/>
                 <p tid="2">
-                    <title xml:lang="en">The Dhāraṇī for Polishing a Gem</title>
+                    <title xml:lang="en">The Dhāraṇī of the Polished Gem</title>
                     includes a short dhāraṇī and instructions to polish a
                     gemstone while reciting the dhāraṇī, and to imagine that
                     this results in a rain of offering substances, which the
@@ -157,8 +163,7 @@
                 <div type="section" xml:id="UT22084-088-034-introduction-1">
                     <milestone unit="chunk" xml:id="UT22084-088-034-24"/>
                     <p tid="9">
-                        <title xml:lang="en">The Dhāraṇī for Polishing a
-                        Gem</title> includes a short dhāraṇī and
+                        <title xml:lang="en">The Dhāraṇī of the Polished Gem</title> includes a short dhāraṇī and
                         instructions to polish a gemstone while reciting the
                         dhāraṇī. This is said to result in a boundless rain
                         of offerings, which the reciter is then meant to
@@ -200,7 +205,7 @@
                         imperial catalogs, nor does it appear at Dunhuang,
                         so it is difficult to assess when it was translated
                         into Tibetan. We are unaware of any extant Sanskrit
-                        text or Chinese translation of <title xml:lang="en">The Dhāraṇī for Polishing a Gem</title>.</p>
+                        text or Chinese translation of <title xml:lang="en">The Dhāraṇī of the Polished Gem</title>.</p>
                     <milestone unit="chunk" xml:id="UT22084-088-034-27"/>
                     <p tid="12">This translation was made on the basis of the three Degé
                         Kangyur recensions of the text, with reference to
@@ -216,7 +221,7 @@
         <body>
             <div type="translation">
                 <head type="translation">The Translation</head>
-                <head type="titleMain" tid="13">The Dhāraṇī for Polishing a Gem</head>
+                <head type="titleMain" tid="13">The Dhāraṇī of the Polished Gem</head>
                 <div type="section" xml:id="UT22084-088-034-section-1">
                     <milestone unit="chunk" xml:id="UT22084-088-034-29"/>
                     <p tid="17">  <ref cRef="F.83.b" key="toh539e" work="W22084"/>
@@ -227,13 +232,12 @@
                         vismanaskara mahājava hūṃ| </mantra>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-088-034-32"/>
-                    <p tid="20">Say this while polishing a gem. Imagine that by doing
+                    <p tid="20">Say this as a gem is polished. Imagine that by doing
                         this a boundless rain of jeweled parasols, banners,
                         and the like fills the whole of the sky, and offer
                         this. </p>
                     <milestone unit="chunk" xml:id="UT22084-088-034-33"/>
-                    <trailer tid="21">This completes “<title xml:lang="en">The Dhāraṇī
-                        for Polishing a Gem</title>.”</trailer>
+                    <trailer tid="21">This completes “<title xml:lang="en">The Dhāraṇī of the Polished Gem</title>.”</trailer>
                 </div>
             </div>
         </body>
@@ -250,7 +254,7 @@
                         (rgyud, na), folio 83.b.</bibl>
                     <bibl xml:id="UT22084-088-034-36">
                         <title xml:lang="Bo-Ltn">rin po che brdar ba’i
-                        gzungs</title>. ka’ ’gyur (dpe bsdur ma)
+                        gzungs</title>. bka’ ’gyur (dpe bsdur ma)
                         [Comparative Edition of the Kangyur], krung go’i bod
                         rig pa zhib ’jug ste gnas kyi bka’ bstan dpe sdur
                         khang (The Tibetan Tripitaka Collation Bureau of the
@@ -264,7 +268,7 @@
                         (rgyud, wa), folio 112.b.</bibl>
                     <bibl xml:id="UT22084-088-034-38">
                         <title xml:lang="Bo-Ltn">rin po che brdar ba’i
-                        gzungs</title>. ka’ ’gyur (dpe bsdur ma)
+                        gzungs</title>. bka’ ’gyur (dpe bsdur ma)
                         [Comparative Edition of the Kangyur], krung go’i bod
                         rig pa zhib ’jug ste gnas kyi bka’ bstan dpe sdur
                         khang (The Tibetan Tripitaka Collation Bureau of the
@@ -278,7 +282,7 @@
                         (gzungs ’dus, waṃ), folio 239.b.</bibl>
                     <bibl xml:id="UT22084-088-034-40">
                         <title xml:lang="Bo-Ltn">rin po che bdar ba’i
-                        gzungs</title>. ka’ ’gyur (dpe bsdur ma)
+                        gzungs</title>. bka’ ’gyur (dpe bsdur ma)
                         [Comparative Edition of the Kangyur], krung go’i bod
                         rig pa zhib ’jug ste gnas kyi bka’ bstan dpe sdur
                         khang (The Tibetan Tripitaka Collation Bureau of the
