--- a/translations/kangyur/placeholders/093-021_toh706-the_hundred_and_eight_names_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-021_toh706-the_hundred_and_eight_names_of_avalokitesvara.xml
@@ -13,11 +13,11 @@
                 <author role="translatorEng" xml:id="UT22084-093-021-9">Catherine Dalton</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-093-021"/>
                 <date/>
             </publicationStmt>
@@ -62,6 +62,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-17T14:07:28.589Z" type="text-version" status="0.0.6" xml:id="UT22084-093-021-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-11T12:42:17.159Z" type="translation-status" status="2.g" xml:id="UT22084-093-021-13">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-11T12:42:17.159Z" type="text-version" status="0.0.7" xml:id="UT22084-093-021-14">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
