--- a/translations/kangyur/translations/090-023_toh579,935-the_dharani_of_the_essence_of_the_six_perfections.xml
+++ b/translations/kangyur/translations/090-023_toh579,935-the_dharani_of_the_essence_of_the_six_perfections.xml
@@ -22,7 +22,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-090-023-79">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.1 <date>2024</date>
+                <edition>v 1.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -156,6 +156,9 @@
                 </change>
                 <change who="#konchog" when="2024-07-09T15:43:12.223Z" type="text-version" status="1.0.1" xml:id="UT22084-090-023-83">
                     <desc>Small proofing fixes throughout all sections.</desc>
+                </change>
+                <change who="#andre" when="2024-07-11T15:04:44.022Z" type="text-version" status="1.0.2" xml:id="UT22084-090-023-84">
+                    <desc>Glossary integration revised, activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -335,21 +338,16 @@
                         International Institute for Buddhist Studies, 2007. </bibl>
                 </div>
             </div>
-            <div type="glossary" status="excluded">
+            <div type="glossary">
                 <list type="glossary">
                     <item>
-                        <gloss type="term" xml:id="UT22084-090-023-62">
-                            <term type="translationMain">the five deeds of immediate
-                                retribution</term>
-                            <term xml:lang="Bo-Ltn" n="1">mtshams med pa lnga </term>
-                            <term xml:lang="bo" n="1">མཚམས་མེད་པ་ལྔ།</term>
+                        <gloss xml:id="UT22084-090-023-62" type="term" mode="match">
+                            <term type="translationMain">five deeds of immediate retribution</term>
                             <term xml:lang="Sa-Ltn" type="attestedDictionary">*pañcānantarya</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">mtshams med pa lnga</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">མཚམས་མེད་པ་ལྔ།</term>
                             <note type="definition">
-                                <p>Acts for which one will be reborn in hell immediately after
-                                    death, without any intervening stages; they are killing an
-                                    arhat, killing one’s father, killing one’s mother, causing a
-                                    schism in the monastic community, and maliciously drawing blood
-                                    from a tathāgata.</p>
+                                <p>Acts for which one will be reborn in hell immediately after death, without any intervening stages; they are killing an arhat, killing one’s father, killing one’s mother, causing a schism in the monastic community, and maliciously drawing blood from a tathāgata.</p>
                             </note>
                         </gloss>
                     </item>
