--- a/translations/kangyur/translations/063-005_toh224-the_episode_of_firm_resovle.xml
+++ b/translations/kangyur/translations/063-005_toh224-the_episode_of_firm_resovle.xml
@@ -26,7 +26,7 @@
                 <editor role="TEImarkupEditor" xml:id="UT22084-063-005-41">Sameer Dhingra</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -125,6 +125,9 @@
                 <change who="#line-tofte" when="2024-06-26T10:35:50.695Z" type="text-version" status="0.0.2" xml:id="UT22084-063-005-275">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
+                <change who="#john" when="2024-07-11T16:12:31.774Z" type="text-version" status="0.0.3" xml:id="UT22084-063-005-276">
+                    <desc>Added line breaks (and removed one).</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -170,6 +173,7 @@
                         repeatedly states, “I do not say of such foolish people that they are cultivating the path; they should be said to be on the wrong course.” He declares that only a nondualistic approach is the
                         correct way to practice: from the standpoint of the dharmadhātu one should not take up, discard, negate, or affirm any phenomenon. By thus not moving away from phenomena, one avoids moving away
                         from the dharmadhātu.</p>
+                    <lb/>
                     <milestone unit="chunk" xml:id="UT22084-063-005-50"/>
                     <p tid="11">While there is no extant Sanskrit manuscript of <title xml:lang="en">The Episode of Firm Resolve</title>, the work was clearly known to Indian scholars, and indeed bears the distinction of
                         being cited as scriptural authority in treatises both on buddha-nature and on Madhyamaka. A portion of this text<note place="end" xml:id="UT22084-063-005-51"> Equivalent to folios 165.a.5–166.b.2
@@ -211,6 +215,7 @@
                     <p tid="15">The sūtra itself is unrelated in theme to any of the sources of buddha-nature doctrine itself, but because it is cited by Asaṅga in his commentary, it has been included in lists of sūtras
                         of “definitive meaning” (Tib. <foreign xml:lang="Bo-Ltn" type="term">nges don</foreign>) by various Tibetan commentators such as Rinchen Yeshé (thirteenth/fourteenth century)<note place="end" xml:id="UT22084-063-005-63"> Brunnhölzl 2014, p. 9.</note> and Gorampa Sönam Sengé (1429–89).<note place="end" xml:id="UT22084-063-005-64"> Brunnhölzl 2014, p. 10.</note>
                     </p>
+                    <lb/>
                     <milestone unit="chunk" xml:id="UT22084-063-005-65"/>
                     <p tid="16">This text appears in all Kangyurs with the same Tibetan title, <title xml:lang="Bo-Ltn">lhag pa’i bsam pa brtan pa’i le’u</title> (<title xml:lang="en">The Episode of Firm
                         Resolve</title>), but with two different Sanskrit titles (albeit with minor spelling differences, likely due to transcription errors or mistakes): <title xml:lang="Sa-Ltn">Sthīrādhyāśaya­parivarta</title> and <title xml:lang="Sa-Ltn">Dṛḍhādhyāśaya­parivarta</title>.<note place="end" xml:id="UT22084-063-005-66">
@@ -276,8 +281,7 @@
                         <l>Is not what will rid him of desire.”</l>
                     </lg>
                     <milestone unit="chunk" xml:id="UT22084-063-005-86"/>
-                    <p tid="35">
-                        <lb/>With these words, the emanated girl flung herself from the impassable hilltop. As she plunged down, she fell apart: her head went one way, her arms another way, and her legs yet
+                    <p tid="35">With these words, the emanated girl flung herself from the impassable hilltop. As she plunged down, she fell apart: her head went one way, her arms another way, and her legs yet
                         another. All her limbs and other parts of her body disintegrated. Just as snow that is touched heats up, melts, and is absorbed into the ground, so, too, did the emanated girl vanish. </p>
                     <milestone unit="chunk" xml:id="UT22084-063-005-87"/>
                     <p tid="36">Since the bodhisattva Firm Resolve <ref cRef="F.165.a" type="folio" xml:id="UT22084-063-005-255"/> could no longer see the emanated girl, his desirous thoughts subsided and he began to
@@ -287,6 +291,7 @@
                         my mind, will certainly give a teaching by which I will clearly realize the Dharma.”</p>
                     <milestone unit="chunk" xml:id="UT22084-063-005-89"/>
                     <p tid="38">Leaving the impassable hilltop, the bodhisattva Firm Resolve went to where the Blessed One was. He bowed his head at the feet of the Blessed One and sat down to one side. </p>
+                    <lb/>
                     <milestone unit="chunk" xml:id="UT22084-063-005-90"/>
                     <p tid="39">At that time, the Blessed One was teaching the Dharma while being honored by a retinue of many hundreds of thousands that surrounded him. When the bodhisattva Firm Resolve knew that the
                         Blessed One had finished speaking, he draped his upper robe over one shoulder and knelt on the ground. With palms joined he bowed toward the Blessed One and asked him about all that had
@@ -313,6 +318,7 @@
                     <milestone unit="chunk" xml:id="UT22084-063-005-98"/>
                     <p tid="44">The Blessed One said, “Noble son, here there are some bhikṣus, bhikṣunīs, laymen, and laywomen who focus on the unpleasantness of phenomena that are unborn and unarisen, and focus on their
                         impermanence, suffering, emptiness, and lack of self: they should be seen as just like that man. I do not say of such foolish people that they are cultivating the path; <ref cRef="F.166.a" type="folio" xml:id="UT22084-063-005-257"/> they should be said to be on the wrong course.</p>
+                    <lb/>
                     <milestone unit="chunk" xml:id="UT22084-063-005-99"/>
                     <p tid="45">“Noble son, this may be illustrated as follows: suppose a man were to fall asleep and dream that the ruler’s wife is in his home and that he lies down with her. Because his presence of
                         mind is impaired, he wonders if he might be killed,<note place="end" xml:id="UT22084-063-005-100"> Where the Tibetan reads <foreign xml:lang="Bo-Ltn" type="quote">gsad</foreign>/<foreign xml:lang="Bo-Ltn" type="quote">bsad</foreign> here, “killed,” the citation in the <title xml:lang="Sa-Ltn">Prasannapadā</title>, according to most Sanskrit manuscripts in Kosaka’s (2021,
@@ -340,6 +346,7 @@
                         the extent of emptiness. I do not say of such foolish people that they are cultivating the path; they should be said to be on the wrong course.<note place="end" xml:id="UT22084-063-005-106"> At
                             this point in the text the citation in the <title xml:lang="Sa-Ltn">Prasannapadā</title> ends (see Introduction <ptr target="#UT22084-063-005-50"/>).</note>
                     </p>
+                    <lb/>
                     <milestone unit="chunk" xml:id="UT22084-063-005-107"/>
                     <p tid="49">“Noble son, this may be illustrated as follows: suppose someone were on a road at noon in the last month of summer. Oppressed by the heat, they become exhausted, thirsty, and miserable.
                         The power of their intense conjecturing leads them to see, there in the wilderness, the mirage of a large, gently flowing river. Concluding that it is there in that way, they think, ‘I will not
@@ -384,6 +391,7 @@
                     <p tid="60">“Therefore, noble son, faithful noble sons and daughters should understand all phenomena to be just like the perception of water that arises in a mirage. Those who understand phenomena in
                         this way are on the right course. Those who understand otherwise are not on the right course. I do not say of such foolish people that they are cultivating the path; they should be said to be on
                         the wrong course.</p>
+                    <lb/>
                     <milestone unit="chunk" xml:id="UT22084-063-005-120"/>
                     <p tid="61">“Noble son, this may be illustrated as follows: suppose a woman takes up a mirror and examines the features of her face. In the highly polished mirror she sees a beautiful and good-looking
                         reflection. While she concludes about it that she will not give rise to desirous thoughts about this reflection, the reason being that it is not hers, nor does she belong to it, do you think,
@@ -404,6 +412,7 @@
                         do not exist, and grasp at them. Moreover, they are pleased and praise themselves while denigrating others. They should be seen as just like that woman. I do not say of such foolish people that
                         they are cultivating the path; they should be said to be on the wrong course. <ref cRef="F.168.b" type="folio" xml:id="UT22084-063-005-262"/>
                     </p>
+                    <lb/>
                     <milestone unit="chunk" xml:id="UT22084-063-005-125"/>
                     <p tid="66">“Noble son, this may be illustrated as follows: a barren woman whose presence of mind was impaired vowed not to hope for a son. Another woman, while knowing and understanding her
                             situation,<note place="end" xml:id="UT22084-063-005-126"> Translated according to the Degé and most other Kangyurs, which read <foreign xml:lang="Bo-Ltn" type="quote">shes shing rtogs bzhin
@@ -461,6 +470,7 @@
                     <p tid="79">“It was with this in mind that I have said that when a wrong view is seen to be a wrong view, that is the right view of it. The right view not only does not move away from wrong views, by
                         way of neither negating them nor affirming them, but also has no existence apart from wrong views being absent, because all phenomena are nondual. Seeing wrong views rightly, just as they are, is
                         the right view, but in dualistic discrimination there is no right view.</p>
+                    <lb/>
                     <milestone unit="chunk" xml:id="UT22084-063-005-140"/>
                     <p tid="80">“Noble son, this may be illustrated as follows: suppose a man were on a road at night, shrouded in darkness. In the empty wilderness he sees a thicket of trees, and there next to one of
                         the trees he thinks he perceives a bandit. He becomes frightened and does not proceed on the path. Noble son, what do you think about this? Without it getting light and the trees becoming visible,
@@ -557,6 +567,7 @@
                         field of merit.<note place="end" xml:id="UT22084-063-005-172"> The Stok Palace manuscript reads “they should be held as worthy of honor. They should be viewed as a field of merit,” referring to
                             the noble sons and daughters themselves.</note> Why is that? Because, Ānanda, those with manifest pride, those who apprehend a result, those who apprehend enlightenment, and those who have not
                         served the past victors cannot accept this presentation of Dharma.”</p>
+                    <lb/>
                     <milestone unit="chunk" xml:id="UT22084-063-005-173"/>
                     <p tid="108">When this presentation of Dharma was taught, the bodhisattva Firm Resolve achieved the acceptance that phenomena are nonarising. </p>
                     <milestone unit="chunk" xml:id="UT22084-063-005-174"/>
@@ -572,10 +583,12 @@
                         bodhisattva Firm Resolve will manifestly awaken to unsurpassed, perfectly complete enlightenment after ten thousand eons. In the eon known as Illumination of All Jewels, and in the world system
                         known as Adorned with All Flowers, he will become a tathāgata, arhat, perfectly complete buddha known as Possessing the Heart of the Glorious Jewel Lotus. His buddha field will possess an
                         unfathomable array of good qualities. Moreover, that buddha field will be filled entirely with bodhisattvas.”</p>
+                    <lb/>
                     <milestone unit="chunk" xml:id="UT22084-063-005-177"/>
                     <p tid="112">The venerable Ānanda then asked the Blessed One, “Blessed One, what is the name of this presentation of Dharma? How should we remember it?”</p>
                     <milestone unit="chunk" xml:id="UT22084-063-005-178"/>
                     <p tid="113">The Blessed One replied, “Ānanda, you should thus remember this presentation of Dharma as <title xml:lang="en">All Phenomena Not Moving Away</title>. You should also remember it as <title xml:lang="en">The Episode of Firm Resolve</title>.”</p>
+                    <lb/>
                     <milestone unit="chunk" xml:id="UT22084-063-005-179"/>
                     <p tid="114">After the Blessed One had spoken these words, the venerable Ānanda, the bodhisattva Firm Resolve, the bodhisattvas, and the bhikṣus, along with everyone else in attendance and the world
                         with its gods, humans, asuras, and gandharvas, rejoiced in what the Blessed One had said.</p>
