--- a/translations/kangyur/placeholders/091-009_toh612,923-the_incantation_the_arm_bracelet_atop_the_standard.xml
+++ b/translations/kangyur/placeholders/091-009_toh612,923-the_incantation_the_arm_bracelet_atop_the_standard.xml
@@ -18,13 +18,14 @@
                 <editor role="reviser" xml:id="UT22084-091-009-7">Lama Dzatse Tashi Rinpoche</editor>
                 <editor role="projectEditor" xml:id="UT22084-091-009-26">Rory Lindsay</editor>
                 <editor role="copyEditor" xml:id="UT22084-091-009-40">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-091-009-56">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.14 <date>2024</date>
+                <edition>v 0.0.16 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-091-009"/>
                 <date/>
             </publicationStmt>
@@ -114,6 +115,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-05-06T13:40:05.224Z" type="text-version" status="0.0.14" xml:id="UT22084-091-009-46">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-09T08:01:45.014Z" type="text-version" status="0.0.15" xml:id="UT22084-091-009-57">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T09:10:42.545Z" type="translation-status" status="2.a" xml:id="UT22084-091-009-58">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T09:10:42.545Z" type="text-version" status="0.0.16" xml:id="UT22084-091-009-59">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
