--- a/translations/kangyur/placeholders/061-011_toh191-the_sutra_of_the_prophecy_concening_the_girl_candrottara.xml
+++ b/translations/kangyur/placeholders/061-011_toh191-the_sutra_of_the_prophecy_concening_the_girl_candrottara.xml
@@ -7,7 +7,7 @@
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Prophecy Concening the Girl Candrottarā</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Candrottarādārikāvyākaraṇasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">bu mo zla mchog lung bstan pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="zh">《童女最上月授記經》(大正藏:《佛說月上女經》)</title>
+                <title type="otherTitle" xml:lang="zh">《童女最上月授記經》(大正藏:《佛說月上女經》)</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryacandrottarā­dārikāvyākaraṇa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bu mo zla mchog lung bstan pa zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" xml:id="UT22084-061-011-1">Annie Bien and team</author>
@@ -16,15 +16,16 @@
                 <consultant role="projectManager" xml:id="UT22084-061-011-4">Annie Bien</consultant>
                 <consultant role="dharmaMaster" xml:id="UT22084-061-011-5">Geshe Dorji Damdul</consultant>
                 <editor role="reviser" xml:id="UT22084-061-011-6">Leslie Kriesel</editor>
+                <editor role="projectEditor" xml:id="UT22084-061-011-29">Andreas Doctor</editor>
                 <sponsor xml:id="UT22084-061-011-16">Make, Wang Xiao Juan</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-061-011"/>
                 <date/>
             </publicationStmt>
@@ -84,6 +85,15 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-05-15T10:47:34.736Z" type="text-version" status="0.0.12" xml:id="UT22084-061-011-22">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-15T10:48:07.295Z" type="text-version" status="0.0.13" xml:id="UT22084-061-011-30">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T11:32:14.438Z" type="translation-status" status="2.e" xml:id="UT22084-061-011-31">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T11:32:14.438Z" type="text-version" status="0.0.14" xml:id="UT22084-061-011-32">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
