--- a/translations/kangyur/placeholders/083-008_toh460a,952-the_incantation_for_seeing_vajrapani_in_dream.xml
+++ b/translations/kangyur/placeholders/083-008_toh460a,952-the_incantation_for_seeing_vajrapani_in_dream.xml
@@ -18,11 +18,11 @@
                 <author role="translatorEng" xml:id="UT22084-083-008-5">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2024</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-083-008"/>
             </publicationStmt>
             <sourceDesc>
@@ -68,6 +68,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T09:25:51.847Z" type="text-version" status="0.0.4" xml:id="UT22084-083-008-9">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T12:14:27.594Z" type="translation-status" status="2.g" xml:id="UT22084-083-008-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T12:14:27.594Z" type="text-version" status="0.0.5" xml:id="UT22084-083-008-11">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
