--- a/translations/tengyur/placeholders/047-083_toh2006-gtam_rgyud_kyi_rtog_pa.xml
+++ b/translations/tengyur/placeholders/047-083_toh2006-gtam_rgyud_kyi_rtog_pa.xml
@@ -8,8 +8,12 @@
                 <title xml:lang="Bo-Ltn" type="mainTitle">gtam rgyud kyi rtog pa/</title>
                 <title xml:lang="en" type="mainTitle">A Ritual Manual in Abbreviated Metre</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="2.g"/>
                 <idno xml:id="UT23703-047-083"/>
             </publicationStmt>
             <sourceDesc>
@@ -37,6 +41,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT23703-047-083-5">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T12:18:38.042Z" type="translation-status" status="2.g" xml:id="UT23703-047-083-6">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T12:18:38.042Z" type="text-version" status="0.0.1" xml:id="UT23703-047-083-7">
+                    <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
