--- a/translations/kangyur/placeholders/083-020_toh472-the_ritual_practices_of_the_muskrat.xml
+++ b/translations/kangyur/placeholders/083-020_toh472-the_ritual_practices_of_the_muskrat.xml
@@ -13,11 +13,11 @@
                 <author role="translatorEng" xml:id="UT22084-083-020-2">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-083-020"/>
                 <date/>
             </publicationStmt>
@@ -51,6 +51,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-083-020-8">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T12:20:18.879Z" type="translation-status" status="2.g" xml:id="UT22084-083-020-9">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T12:20:18.879Z" type="text-version" status="0.0.5" xml:id="UT22084-083-020-10">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
