--- a/translations/kangyur/placeholders/076-012_toh358-the_account_of_the_noble_deeds_of_sardulakarna.xml
+++ b/translations/kangyur/placeholders/076-012_toh358-the_account_of_the_noble_deeds_of_sardulakarna.xml
@@ -19,12 +19,12 @@
                 <sponsor xml:id="UT22084-076-012-7">Shin Nomura</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.8 <date>2024</date>
+                <edition>v 0.1.9 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-076-012"/>
                 <date/>
             </publicationStmt>
@@ -85,6 +85,12 @@
                 </change>
                 <change who="#celso" when="2024-05-15T17:32:01.685Z" type="text-version" status="0.1.8" xml:id="UT22084-076-012-29">
                     <desc>Updated title from "account of noble deeds" to "exemplary tale"</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T12:26:33.43Z" type="translation-status" status="2.c" xml:id="UT22084-076-012-30">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T12:26:33.43Z" type="text-version" status="0.1.9" xml:id="UT22084-076-012-31">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
