--- a/translations/kangyur/placeholders/035-018_toh44-18-chapter_18_the_tathagata_ascends_to_the_peak_of_mount_meru.xml
+++ b/translations/kangyur/placeholders/035-018_toh44-18-chapter_18_the_tathagata_ascends_to_the_peak_of_mount_meru.xml
@@ -9,13 +9,14 @@
                 <title type="otherTitle" xml:lang="zh">如來昇須彌山頂品/佛昇須彌頂品/昇須彌山頂品</title>
                 <author role="translatorMain" xml:id="UT22084-035-018-8">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-035-018-6">Ana Cristina Lopes</author>
+                <editor role="projectEditor" xml:id="UT22084-035-018-16">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-035-018"/>
             </publicationStmt>
             <sourceDesc>
@@ -59,6 +60,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-05T11:49:07.038Z" type="text-version" status="0.0.7" xml:id="UT22084-035-018-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-05T11:49:42.477Z" type="text-version" status="0.0.8" xml:id="UT22084-035-018-17">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T12:52:10.023Z" type="translation-status" status="2.f" xml:id="UT22084-035-018-18">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T12:52:10.023Z" type="text-version" status="0.0.9" xml:id="UT22084-035-018-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
